# ChangeLog for dev-perl/Class-Trigger
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Trigger/ChangeLog,v 1.23 2007/01/15 15:01:45 mcummings Exp $

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Class-Trigger-0.10.ebuild:
  Ebuild maintenance

  07 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  -Class-Trigger-0.08.ebuild, -Class-Trigger-0.09.ebuild:
  Wee bit of cleanup

  07 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Class-Trigger-0.10.ebuild:
  Marking amd64 stable

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Class-Trigger-0.08.ebuild, Class-Trigger-0.09.ebuild,
  Class-Trigger-0.10.ebuild:
  Adding perl dep; fixed DEPEND

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> Class-Trigger-0.10.ebuild:
  Mark 0.10 stable on ia64

  04 Jul 2006; Christian Hartmann <ian@gentoo.org>
  Class-Trigger-0.08.ebuild, Class-Trigger-0.09.ebuild,
  Class-Trigger-0.10.ebuild:
  Fixed RDEPEND wrt bug #134781

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> Class-Trigger-0.10.ebuild:
  Mark 0.10 ~ia64

  13 Feb 2006; <mcumming@gentoo.org> Class-Trigger-0.08.ebuild,
  Class-Trigger-0.09.ebuild, Class-Trigger-0.10.ebuild:
  Virtual for perl-core dep

  21 Jan 2006; Markus Rothe <corsair@gentoo.org> Class-Trigger-0.10.ebuild:
  Stable on ppc64

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  Class-Trigger-0.10.ebuild:
  Marking stable sparc x86

*Class-Trigger-0.10 (12 Nov 2005)

  12 Nov 2005; Michael Cummings <mcummings@gentoo.org>
  +Class-Trigger-0.10.ebuild:
  Version bump upstream

  23 Sep 2005; Markus Rothe <corsair@gentoo.org> Class-Trigger-0.08.ebuild,
  Class-Trigger-0.09.ebuild:
  Stable on ppc64 (bug #101114)/added ~ppc64 to 0.09

  05 Sep 2005; Brent Baude <ranger@gentoo.org> Class-Trigger-0.08.ebuild:
  marking Class-Trigger-0.08 ~ppc64 in support of Bug 101114

  03 Aug 2005; Chris White <chriswhite@gentoo.org>
  Class-Trigger-0.09.ebuild: