@@ -1,12 +1,17 @@
 DIST Class-Trigger-0.10.tar.gz 5828 RMD160 e7f22d9f6778be84d29a0f7a59efc2c8d51b9f39 SHA1 964516782e1816766609e864f2d593971961fe74 SHA256 8903a1765234cf6aaa172b0334ca214d0125cf637a29058eddc4fb905e036c3d
+DIST Class-Trigger-0.11.tar.gz 6145 RMD160 415f7ccfe1a25f8832376901ee9525163d335cbe SHA1 168b9e409da865fcbc27d6ac91474d19e97d4f10 SHA256 facc2dc7578cc2dc890552e7af4cce8237d11fe9f48967d6a85490fe2edea707
 EBUILD Class-Trigger-0.10.ebuild 642 RMD160 b8f89a781a1e408cbcfa33888faf5f7e9d3a9e3a SHA1 e8efe72460e71a74457f2bb8ce700fe7aa869c3d SHA256 5e6cb3e0d0cee6be3f38fc095cd39787214f5c7f2012dabea46061dc3c24c742
 MD5 c651ca8f1a7e8c5c8317e5936a433bdc Class-Trigger-0.10.ebuild 642
 RMD160 b8f89a781a1e408cbcfa33888faf5f7e9d3a9e3a Class-Trigger-0.10.ebuild 642
 SHA256 5e6cb3e0d0cee6be3f38fc095cd39787214f5c7f2012dabea46061dc3c24c742 Class-Trigger-0.10.ebuild 642
-MISC ChangeLog 3042 RMD160 d135ff80b729c78ff2dbd698c75a25b1a6edcde4 SHA1 9569c86013ff161cc8dbc758e6716b8347e6e128 SHA256 d7a192460e67dbead9f0ae83d0b5795be693a58411c8c7f2f617962d04704a6e
-MD5 27a6e2e120bbd30e43fa040ddf251636 ChangeLog 3042
-RMD160 d135ff80b729c78ff2dbd698c75a25b1a6edcde4 ChangeLog 3042
-SHA256 d7a192460e67dbead9f0ae83d0b5795be693a58411c8c7f2f617962d04704a6e ChangeLog 3042
+EBUILD Class-Trigger-0.11.ebuild 641 RMD160 f82ad91888db881f3494bcab6bd90ca05034382f SHA1 4c6c61daccd79598b1535e624a714e40e781e637 SHA256 fbdcce410726b3a9e4abbb49d5adfc77ed1493a76fa1f2d0283c25c4f22d7ffd
+MD5 e0608c9034b4ea6b71c88382d7d72586 Class-Trigger-0.11.ebuild 641
+RMD160 f82ad91888db881f3494bcab6bd90ca05034382f Class-Trigger-0.11.ebuild 641
+SHA256 fbdcce410726b3a9e4abbb49d5adfc77ed1493a76fa1f2d0283c25c4f22d7ffd Class-Trigger-0.11.ebuild 641
+MISC ChangeLog 3178 RMD160 c8d737ded823eef8bc7f050900f50c5d43cb0243 SHA1 8fa8e900c7aae496b50523de0f9a97b8320b6e3b SHA256 80c0b97202e7037749a1e9332926d9b976795c2ce236a4b0bc71e5d82f5bc5ef
+MD5 489f999059dcde09d8502e5110cd575f ChangeLog 3178
+RMD160 c8d737ded823eef8bc7f050900f50c5d43cb0243 ChangeLog 3178
+SHA256 80c0b97202e7037749a1e9332926d9b976795c2ce236a4b0bc71e5d82f5bc5ef ChangeLog 3178
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
@@ -14,3 +19,6 @@ SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca metadata
 MD5 d42ed0f036c645d5c25c41ffff83eec1 files/digest-Class-Trigger-0.10 250
 RMD160 c5474aa9215ec47ec672c403ff7d31fb4ae426f7 files/digest-Class-Trigger-0.10 250
 SHA256 a73d366516f0d27d2292f097fd2ec09e4624c2cc7c1dc917ae1962bec2b55059 files/digest-Class-Trigger-0.10 250
+MD5 753078b7da58dbf274d6a7fb9d153018 files/digest-Class-Trigger-0.11 250
+RMD160 994a9500b39cf29383fba857652d645717d62f72 files/digest-Class-Trigger-0.11 250
+SHA256 0913c1aca1e5561b7c7b9ea4f0f30af85475472af28d739f870842aeb0c70d1d files/digest-Class-Trigger-0.11 250
