@@ -1,0 +1,3 @@
+MD5 28cfe60971d8aecafc91afe55565aab2 Class-Trigger-0.11.tar.gz 6145
+RMD160 415f7ccfe1a25f8832376901ee9525163d335cbe Class-Trigger-0.11.tar.gz 6145
+SHA256 facc2dc7578cc2dc890552e7af4cce8237d11fe9f48967d6a85490fe2edea707 Class-Trigger-0.11.tar.gz 6145
