@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Class-Trigger
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Trigger/ChangeLog,v 1.23 2007/01/15 15:01:45 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Trigger/ChangeLog,v 1.24 2007/03/09 22:00:42 mcummings Exp $
+
+*Class-Trigger-0.11 (09 Mar 2007)
+
+  09 Mar 2007; Michael Cummings <mcummings@gentoo.org>
+  +Class-Trigger-0.11.ebuild:
+  Version bump
 
   15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
   Class-Trigger-0.10.ebuild:
